# QMCTorch

./: .coveragerc  .gitignore  .prospector.yml  .travis.yml  CHANGELOG.rst  LICENSE  README.md  README.rst  pychamp.sublime-workspace  requirements.txt  setup.cfg  setup.py  tmp656dwl96  tmpouxlkclt
deepqmc/: __init__.py
docs/: Makefile  api.rst  conf.py  example.rst  example_gpu.rst  example_horovod.rst  example_opt.rst  example_sp.rst  h2o_geo_opt.rst  hdf5.rst  index.rst  intro.rst  make.bat  molecule.rst  optimizer.rst  qmc.rst  qmcnet.rst  qmctorch.layer.ao.rst  qmctorch.layer.jastrow.rst  qmctorch.layer.slater.rst  qmctorch.layers.rst  qmctorch.molecule.rst  qmctorch.rst  qmctorch.sampler.rst  qmctorch.solver.rst  qmctorch.utils.rst  qmctorch.wavefunction.rst  sampler.rst  solver.rst  tutorial_correlation.rst  tutorial_geo_opt.rst  tutorial_gpus.rst  tutorial_hdf5.rst  tutorial_sampling_traj.rst  tutorial_wf_opt.rst
example/: co.py  h2.py  h2.txt  h2_gpu.py  h2_hvd.py  h2_var.py  h2o.py  h2o_angle.py  h2o_sampling.py  h2o_traj.xyz  h2plus.py  helium.py  hess_simple.py  ho1d.py  ho2d.py  ho3d.py  hydrogen.py  jast_graph.py  lih.py  morse.py  morse1d.py  nn_double_well.py  nn_h2.py  nn_h2_AO.py  nn_h2_rbf.py  nn_h2_sto.py  nn_h2plus.py  nn_h2plus_v2.py  nn_ho1d.py  nn_ho2d.py  nn_hydrogen.py  nn_morse.py  nn_pyscf.py  sand_box.py  tes_autograd.py  test_ao_values.py  test_trace_trick.py  test_trace_trick_simple.py  test_trace_trick_simple2.py  test_trace_trick_simple3.py  (+4 more)
h5x/: baseimport.py  context_menu.py  h5x.py
horovod_tests/: test_h2_hvd.py  test_hvd.py  (+2 more)
(+816 files in other folders)
