[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = qmctorch

[coverage:report]
omit =
    test/test_*.py
    horovod_tests/test_*.py
    qmctorch/wavefunction/calculator/adf.py

[tool:pytest]
addopts = --cov --cov-append --cov-report xml --cov-report term

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html
